# GeospatialDataSystem

./: CMakeLists.txt
data/: geospatial_data.csv
etc/: config.json
include/: GeoHttpServer.h  GeoLogger.h  GeoObject.h  GeoServer.h  GeoTask.h  GeoTools.h  Public.h  RTreeManager.h  Thread.h  ThreadPool.h
script/: GenerateGeoData.py  InsertGeoData.py
src/: CMakeLists.txt  main.cpp
src/front/: App.vue  index.html  main.js
src/front/components/: GeoDataQuery.vue
src/front/css/: style.css
src/front/js/: app.js
src/front/router/: index.js
src/front/services/: GeoDataService.js
src/front/views/: GeoDataPage.vue
src/http/: CMakeLists.txt  GeoHttpServer.cpp
src/log/: CMakeLists.txt  GeoLogger.cpp
src/public/: CMakeLists.txt  GeoObject.cpp  Public.cpp
src/server/: CMakeLists.txt  GeoServer.cpp
src/service/: CMakeLists.txt  GeoTask.cpp  RTreeManager.cpp
src/thread/: CMakeLists.txt  Thread.cpp  ThreadPool.cpp
src/utils/: CMakeLists.txt  GeoTools.cpp
test/: CMakeLists.txt  testBuildRTree.cpp  testInsertRTree.cpp  testPython.cpp
